--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -1,77 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_create_account"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical">
-
-    <com.shaishavgandhi.loginbuttons.FacebookButton
-        android:layout_width="match_parent"
-        android:text="Obter pelo Facebook"
-        app:iconSize="30dp"
-        app:roundedCorner="true"
-        android:clickable="true"
-        android:layout_marginBottom="16dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/facebook_login_button"
-        />
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/nome_usuario"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Nome do usuário"
-            android:inputType="textCapWords"
-            android:imeOptions="actionNext"/>
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/login_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Email do usuário"
-            android:inputType="textEmailAddress"
-            android:imeOptions="actionNext"/>
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <com.checkmybill.views.PhoneEditText
-            android:id="@+id/num_telefone"
-            android:layout_width="match_parent"
-            android:hint="Nº Telefone"
-            android:layout_height="wrap_content" />
-    </android.support.design.widget.TextInputLayout>
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/password_container_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:orientation="vertical">
+
+        <com.shaishavgandhi.loginbuttons.FacebookButton
+            android:layout_width="match_parent"
+            android:text="Obter pelo Facebook"
+            app:iconSize="30dp"
+            app:roundedCorner="true"
+            android:clickable="true"
+            android:layout_marginBottom="16dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/facebook_login_button"
+            />
+
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
-                android:id="@+id/senha"
+                android:id="@+id/nome_usuario"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Sua Senha"
-                android:inputType="textPassword"
+                android:hint="Nome do usuário"
+                android:inputType="textCapWords"
                 android:imeOptions="actionNext"/>
         </android.support.design.widget.TextInputLayout>
 
@@ -79,33 +43,75 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
-                android:id="@+id/confirm_senha"
+                android:id="@+id/login_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Confirmação da Senha"
-                android:inputType="textPassword"
-                android:imeOptions="actionDone"/>
+                android:hint="Email do usuário"
+                android:inputType="textEmailAddress"
+                android:imeOptions="actionNext"/>
         </android.support.design.widget.TextInputLayout>
 
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.checkmybill.views.PhoneEditText
+                android:id="@+id/num_telefone"
+                android:layout_width="match_parent"
+                android:hint="Nº Telefone"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+
+        <LinearLayout
+            android:id="@+id/password_container_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/senha"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Sua Senha"
+                    android:inputType="textPassword"
+                    android:imeOptions="actionNext"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/confirm_senha"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Confirmação da Senha"
+                    android:inputType="textPassword"
+                    android:imeOptions="actionDone"/>
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/createAccountBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
+            android:padding="12dp"
+            android:background="@drawable/button_green_shape"
+            android:textColor="@color/md_white_1000"
+            android:text="Criar Conta"/>
+
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/hidden_fabebookLoginButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:visibility="gone"/>
     </LinearLayout>
 
-
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/createAccountBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="24dp"
-        android:padding="12dp"
-        android:background="@drawable/button_green_shape"
-        android:textColor="@color/md_white_1000"
-        android:text="Criar Conta"/>
-
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/hidden_fabebookLoginButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:visibility="gone"/>
-</LinearLayout>
+</ScrollView>
