--- a/app/src/main/res/menu/menu_home_logged.xml
+++ b/app/src/main/res/menu/menu_home_logged.xml
@@ -55,4 +55,10 @@
         android:orderInCategory="100"
         android:title="Sair"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_export"
+        android:orderInCategory="100"
+        android:title="Exportar base"
+        app:showAsAction="never" />
 </menu>
