--- a/app/src/main/res/menu/menu_home_not_logged.xml
+++ b/app/src/main/res/menu/menu_home_not_logged.xml
@@ -44,4 +44,10 @@
         android:orderInCategory="100"
         android:title="Realizar Login"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_export"
+        android:orderInCategory="100"
+        android:title="Exportar base"
+        app:showAsAction="never" />
 </menu>
