--- a/app/src/main/res/values/felipetorres.xml
+++ b/app/src/main/res/values/felipetorres.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="title_avaliar_plano">Avaliar</string>
+    <string name="title_avaliar_plano">Ranking</string>
 </resources>
