--- a/app/src/main/res/layout/fragment_coverage_map.xml
+++ b/app/src/main/res/layout/fragment_coverage_map.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.gms.maps.MapView
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="match_parent"/>
 
     <!-- Seção no canto superior -->
     <!-- android:background="#50828282"-->
@@ -17,80 +16,106 @@
         android:id="@+id/layout_exibicaoTipo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center|top"
-        android:orientation="vertical"
+        android:paddingRight="5dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:contentPadding="2dp">
+
+            <EditText
+                android:id="@+id/filter_map_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Pesquisar um endereço..."
+                android:imeOptions="actionSearch"
+                android:drawableRight="@drawable/places_ic_search"
+                android:background="@android:color/transparent"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:singleLine="true"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse" />
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:contentPadding="2dp"
+            android:layout_marginTop="5dp">
+
+            <Spinner
+                android:id="@+id/filter_exibicao"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+    <!-- MultiSpinner, para exibir o filtro de operadoras... -->
+    <android.support.v7.widget.CardView
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp"
-        android:visibility="visible">
-
-        <EditText
-            android:id="@+id/filter_map_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
-            android:hint="Pesquisar um endereço..."
-            android:textStyle="italic"
-            android:layout_marginTop="2dp"
-            android:imeOptions="actionSearch"
-            android:drawableRight="@drawable/places_ic_search"
-            android:background="@drawable/mapview_searchview_style"
-            android:singleLine="true"
-            android:maxLines="1"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#50828282">
-            <Spinner
-                android:id="@+id/filter_exibicao"
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
-                android:layout_height="match_parent"/>
-            </LinearLayout>
-        </LinearLayout>
-
-    <!-- MultiSpinner, para exibir o filtro de operadoras... -->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|bottom"
-        android:orientation="vertical"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop ="5dp"
-        android:background="#50828282"
-        android:visibility="visible">
+        app:contentPadding="5dp"
+        android:orientation="vertical">
 
         <com.checkmybill.util.MultiSpinner
             android:id="@+id/filter_operadoras"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorWhite"/>
+
+    </android.support.v7.widget.CardView>
+
+    <!--Botao de Localização-->
+    <LinearLayout
+        android:id="@+id/btnLocalUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/floating_button_primary"
+        android:elevation="2dp"
+        android:padding="12dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="50dp">
+
+        <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_location"/>
+
     </LinearLayout>
 
-
+    <!--Botao de Ranking-->
     <LinearLayout
         android:id="@+id/customBtnRanking"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start|center_vertical"
-        android:orientation="vertical"
-        android:background="#50828282"
-        android:visibility="visible"
-        android:padding="5dp">
+        android:background="@drawable/floating_button_primary"
+        android:elevation="4dp"
+        android:padding="12dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="110dp">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:src="@drawable/ranking_icon"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ranking"
-            android:textStyle="bold"/>
 
     </LinearLayout>
 
@@ -100,8 +125,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:indeterminateDrawable="@drawable/progress_bar"
-        android:layout_margin="15dp"
-        android:visibility="visible"/>
-</FrameLayout>
+        android:layout_centerInParent="true"
+        android:indeterminateDrawable="@drawable/progress_bar"/>
+
+</RelativeLayout>
