--- a/app/src/main/res/layout/fragment_coverage_map.xml
+++ b/app/src/main/res/layout/fragment_coverage_map.xml
@@ -10,8 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <!-- Seção no canto superior -->
-    <!-- android:background="#50828282"-->
     <LinearLayout
         android:id="@+id/layout_exibicaoTipo"
         android:layout_width="match_parent"
@@ -44,40 +42,47 @@
 
         </android.support.v7.widget.CardView>
 
-
-        <android.support.v7.widget.CardView
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:contentPadding="2dp"
-            android:layout_marginTop="5dp">
+            android:layout_marginTop="5dp"
+            android:weightSum="2">
 
-            <Spinner
-                android:id="@+id/filter_exibicao"
+            <android.support.v7.widget.CardView
+                android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginRight="2.5dp">
 
-        </android.support.v7.widget.CardView>
+                <Spinner
+                    android:id="@+id/filter_exibicao"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"/>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2.5dp"
+                android:visibility="gone">
+
+                <com.checkmybill.util.MultiSpinner
+                    android:id="@+id/filter_operadoras"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"/>
+
+            </android.support.v7.widget.CardView>
+
+        </LinearLayout>
 
     </LinearLayout>
-
-    <!-- MultiSpinner, para exibir o filtro de operadoras... -->
-    <android.support.v7.widget.CardView
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp"
-        app:contentPadding="5dp"
-        android:orientation="vertical">
-
-        <com.checkmybill.util.MultiSpinner
-            android:id="@+id/filter_operadoras"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorWhite"/>
-
-    </android.support.v7.widget.CardView>
 
     <!--Botao de Localização-->
     <LinearLayout
@@ -90,7 +95,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="50dp">
+        android:layout_marginBottom="10dp">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -110,7 +115,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="110dp">
+        android:layout_marginBottom="65dp">
 
         <ImageView
             android:layout_width="24dp"
