--- a/app/src/main/res/layout/activity_ger_creditos_plano.xml
+++ b/app/src/main/res/layout/activity_ger_creditos_plano.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_ger_creditos_plano"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_above="@+id/card_bottom_creditos">
         <!-- Filtro Area -->
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -50,64 +47,49 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recargas_list"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:visibility="visible"
-            android:layout_weight="0.9">
+            android:layout_height="match_parent"
+            android:visibility="visible">
         </android.support.v7.widget.RecyclerView>
 
         <TextView
             android:id="@+id/noRecargaListData"
             android:visibility="gone"
             android:layout_gravity="center|top"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="0.9"
-            android:paddingTop="10dp"
-            android:textColor="@color/md_red_900"
-            android:text="[Não foi realizada nenhuma recarga neste período]"/>
-
-        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <android.support.v7.widget.CardView
-                android:layout_gravity="bottom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="4dp"
-                app:cardUseCompatPadding="true"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                app:cardBackgroundColor="@color/md_white_1000">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="0.5"
-                        android:layout_height="wrap_content"
-                        android:text="Valor total de recarga usado:"/>
-                    <TextView
-                        android:id="@+id/recarga_valoTotalUsado"
-                        android:layout_width="0dp"
-                        android:layout_weight="0.4"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="R$ 00.00"/>
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="@color/md_red_900"
+            android:text="Não foi realizada nenhuma recarga neste período"/>
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/gerCreditos_fabButton"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_bottom_creditos"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_marginBottom="40dp"
-        app:backgroundTint="@color/colorPrimary"
-        android:src="@drawable/ic_add_white_24dp"/>
+        app:cardCornerRadius="4dp"
+        app:cardUseCompatPadding="true"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardBackgroundColor="@color/md_white_1000">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
+                android:layout_height="wrap_content"
+                android:text="Valor total de recarga usado:"/>
+            <TextView
+                android:id="@+id/recarga_valoTotalUsado"
+                android:layout_width="0dp"
+                android:layout_weight="0.4"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="R$ 00.00"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
