--- a/app/src/main/res/layout/fragment_plano.xml
+++ b/app/src/main/res/layout/fragment_plano.xml
@@ -246,7 +246,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/primary"
+            android:background="@color/md_orange_600"
             android:weightSum="5">
 
             <LinearLayout
